--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,5 +31,4 @@ jobs:
 
             - name: Run unit tests & Generate Coverage report
               run: |
-                  pytest -s -vv --cov=semantor tests
-                  
+                  pytest -s -vv                   
